--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : thibaultlaurens
+      short_name : tonyhack
     livefyre :
       site_id : 123
     intensedebate :
